admission-webhook-sample/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-webhook
  namespace: webhook
  labels:
    app: webhook
    service: admission-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
      service: admission-webhook
  template:
    metadata:
      labels:
        app: webhook
        service: admission-webhook
    spec:
      containers:
      - name: admission-webhook
        image: localhost:5000/admission-webhook-sample:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: admission-webhook-cert
          mountPath: /cert
      volumes:
      - name: admission-webhook-cert
        configMap:
          name: admission-webhook-cert
