admission-webhook-sample/deploy/test-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
    #  namespace: webhook
    #annotations:
    #inject-init-container: "true"
  labels:
    app: nginx
spec:
  containers:
  - image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
