admission-webhook-sample/deploy/webhook-admission-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-webhook
  labels:
    app: webhook
    service: admission-webhook
webhooks:
  - name: admission-webhook.webhook.com
    clientConfig:
      # url: "https://admission-webhook.webhook.svc.cluster.local/inject-init-container"
      service:
        name: admission-webhook
        namespace: webhook
        path: "/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVBRENDQXVpZ0F3SUJBZ0lVSlFYQjJBTEl6dHVvUjYrRmJMK2lNaHFJeFFNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZURUxNQWtHQTFVRUJoTUNTVTR4RHpBTkJnTlZCQWdNQmt0bGNtRnNZVEVPTUF3R0ExVUVCd3dGUzI5agphR2t4RURBT0JnTlZCQW9NQjNWemRDNWpiMjB4RXpBUkJnTlZCQU1NQ25kbFltaHZiMnRmWTJFd0lCY05Nak14Ck1qQTJNakl3TVRJM1doZ1BNakk1TnpBNU1qQXlNakF4TWpkYU1GVXhDekFKQmdOVkJBWVRBa2xPTVE4d0RRWUQKVlFRSURBWkxaWEpoYkdFeERqQU1CZ05WQkFjTUJVdHZZMmhwTVJBd0RnWURWUVFLREFkMWMzUXVZMjl0TVJNdwpFUVlEVlFRRERB [...]
    rules:
      - operations: ["*"]
        resources: ["*"]
        apiGroups: ["*"]
        apiVersions: ["v1"]
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
